[package]
name = "ddns-gcloud"
version = "0.1.0"
authors = ["Andrey Cizov <acizov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "1.0.12"
google-dns1 = "^1.0"
structopt = "^0.2"
